# Screw

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  mypy.ini  pyproject.toml
src/: console_player.py  constants.py  exceptions.py  game.py  game_types.py  main.py  messaging.py  player_game_state.py  player_state.py  utilities.py
src/players/: abstract_player.py  computer_player.py  greedy_player.py  human_player.py  random_player.py  simple_mcts_player.py
test/unit/: test_game.py  test_utilities.py
